crates/claptrap/tests/snapshots/script__posix__test_pacman_script_bash.snap
---
source: crates/claptrap/tests/script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
#!/usr/bin/env bash

set -euo pipefail

if ! command -v claptrap &> /dev/null; then
    echo "claptrap command not found. Please install it first, see https://claptrap.sh for instructions."
    exit 1
fi

eval "$(claptrap --spec ../../examples/pacman/spec.toml -- "$@")"

if [ -z "${claptrap__subcommand+x}" ]; then
  :
else
  echo "claptrap__subcommand: ${claptrap__subcommand}"
  case "${claptrap__subcommand}" in
    "query")
      if [ -n "${claptrap_query_search+x}" ]; then
        for i in "${!claptrap_query_search[@]}"; do
          echo "claptrap_query_search[$i]: ${claptrap_query_search[$i]}"
        done
      fi
      if [ -n "${claptrap_query_info+x}" ]; then
        for i in "${!claptrap_query_info[@]}"; do
          echo "claptrap_query_info[$i]: ${claptrap_query_info[$i]}"
        done
      fi
      ;;
    "sync")
      if [ -n "${claptrap_sync_search+x}" ]; then
        for i in "${!claptrap_sync_search[@]}"; do
          echo "claptrap_sync_search[$i]: ${claptrap_sync_search[$i]}"
        done
      fi
      if [ -n "${claptrap_sync_info+x}" ]; then
        echo "claptrap_sync_info: ${claptrap_sync_info}"
      fi
      if [ -n "${claptrap_sync_package+x}" ]; then
        for i in "${!claptrap_sync_package[@]}"; do
          echo "claptrap_sync_package[$i]: ${claptrap_sync_package[$i]}"
        done
      fi
      ;;
  esac
fi
